@@ -1,6 +1,7 @@
+- STREL-46 fix ALT matches REF error in somatic SNV output
 - STREL-43 add new hts file stream merger
 - STREL 32 left-shift/standardize input alignment records
-- STARKA-403 charged somatic SNV/indel scoring model for liquid tumor support
+- STARKA-403 change somatic SNV/indel scoring model for liquid tumor support
 - STREL-36 fix indel breakend support test
 - STREL-29 fix edge-case handling of overlapping indel candidate/forcedGT input
 - STREL-27 refactor indel candidacy to uniformly test all indel types
